--- a/bundle/bundle.yaml
+++ b/bundle/bundle.yaml
@@ -1,6 +1,8 @@
 apiVersion: "1"
-version: "1"
+version: "2"
 id: "cloudbees-vish-dev-controller"
 description: "CloudBees CI configuration bundle for the cloudbees-vish dev-controller Controller"
 availabilityPattern: "cloudbees-ci-casc-workshop/cloudbees-vish/dev-controller"
 parent: "base"
+rbac:
+  - "rbac.yaml"
