--- a/bundle/bundle.yaml
+++ b/bundle/bundle.yaml
@@ -1,8 +1,10 @@
 apiVersion: "1"
-version: "2"
+version: "3"
 id: "cloudbees-vish-dev-controller"
 description: "CloudBees CI configuration bundle for the cloudbees-vish dev-controller Controller"
 availabilityPattern: "cloudbees-ci-casc-workshop/cloudbees-vish/dev-controller"
 parent: "base"
 rbac:
   - "rbac.yaml"
+items:
+  - "folder.yaml"
