--- a/bundle/bundle.yaml
+++ b/bundle/bundle.yaml
@@ -1,10 +1,10 @@
 apiVersion: "1"
-version: "3"
+version: "4"
 id: "cloudbees-vish-dev-controller"
 description: "CloudBees CI configuration bundle for the cloudbees-vish dev-controller Controller"
 availabilityPattern: "cloudbees-ci-casc-workshop/cloudbees-vish/dev-controller"
-parent: "base"
-rbac:
-  - "rbac.yaml"
+parent: "rbac-base"
 items:
   - "folder.yaml"
+variables:
+  - "variables.yaml"
